--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,27 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = 
+	lvgl/lvgl@^8.0.0
+	bodmer/TFT_eSPI@^2.3.67
+monitor_speed = 115200
+build_flags =
+	-DUSER_SETUP_LOADED=1
+	-DILI9488_DRIVER=1
+	-DTFT_WIDTH=320
+	-DTFT_HEIGHT=480
+	-DTFT_MISO=19
+	-DTFT_MOSI=23
+	-DTFT_SCLK=18
+	-DTFT_CS=15
+	-DTFT_DC=2
+	-DTFT_RST=4
+	-DTOUCH_CS=21
+	-DSPI_FREQUENCY=40000000
+	-DSPI_READ_FREQUENCY=20000000
+	-DSPI_TOUCH_FREQUENCY=2500000
+	-DBUZZER_PIN=17
+	-DBACKLIGHT_PIN=22
+	-DRFID_RST_PIN=16
+	-DRFID_SDA_PIN=5
+	-DLV_CONF_INCLUDE_SIMPLE
