rfid: Implantada librería RC522 para RFID

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,9 @@ framework = arduino
 lib_deps = 
 	lvgl/lvgl@^8.0.0
 	bodmer/TFT_eSPI@^2.3.67
+	miguelbalboa/MFRC522@^1.4.8
 monitor_speed = 115200
-build_flags =
+build_flags = 
 	-DUSER_SETUP_LOADED=1
 	-DILI9488_DRIVER=1
 	-DTFT_WIDTH=320
@@ -35,5 +36,6 @@ build_flags =
 	-DBACKLIGHT_PIN=22
 	-DRFID_RST_PIN=16
 	-DRFID_SDA_PIN=5
+	-DMFRC522_SPICLOCK=8000000u
 	-DLV_CONF_INCLUDE_SIMPLE
 	-Iinclude
