net: Envío de token a Séneca
CUIDADO: No es funcional. Falta almacenamiento de cookie del punto de control

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,8 @@ lib_deps =
 	lvgl/lvgl@^8.0.0
 	bodmer/TFT_eSPI@^2.3.67
 	miguelbalboa/MFRC522@^1.4.8
+	adafruit/TinyXML@^1.0.2
+	rpolitex/ArduinoNvs@^2.5
 monitor_speed = 115200
 build_flags = 
 	-DUSER_SETUP_LOADED=1
