--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+board_build.partitions = min_spiffs.csv
 lib_deps = 
 	https://github.com/lvgl/lvgl.git#master
 	bodmer/TFT_eSPI@^2.3.67
@@ -19,6 +20,7 @@ lib_deps =
 	adafruit/TinyXML@^1.0.2
 	rpolitex/ArduinoNvs@^2.5
 	https://github.com/iesoretania/lv_lib_qrcode.git#master
+	fabiuz7/Melody Player@^2.2.1
 monitor_speed = 115200
 build_flags = 
 	-DUSER_SETUP_LOADED=1
