--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ board = esp32dev
 framework = arduino
 board_build.partitions = min_spiffs.csv
 lib_deps = 
-	https://github.com/lvgl/lvgl.git#master
+	lvgl/lvgl@^8.0
 	bodmer/TFT_eSPI@^2.3.67
 	miguelbalboa/MFRC522@^1.4.8
 	adafruit/TinyXML@^1.0.2
