--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -1,10 +1,12 @@
-name: PlatformIO CI
+name: PlatformIO CI release
 
-on: [push]
+on:
+  push:
+    tags:
+      - '*'
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
