feat: Soporte inicial de notificación vía LEDs

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ lib_deps =
 	rpolitex/ArduinoNvs@^2.5
 	https://github.com/iesoretania/lv_lib_qrcode.git#master
 	fabiuz7/Melody Player@^2.2.1
+	roboticsbrno/SmartLeds@^1.2.1
 monitor_speed = 115200
 build_flags = 
 	-DUSER_SETUP_LOADED=1
