feat: Soporte preliminar de lectores de 125 kHz (RDM6300 que devuelve código hex. ASCII)

--- a/platformio.ini
+++ b/platformio.ini
@@ -40,6 +40,8 @@ build_flags =
 	-DSPI_TOUCH_FREQUENCY=2500000
 	-DBUZZER_PIN=17
 	-DBACKLIGHT_PIN=22
+#	-DRFID_RDM6300_TX=12
+    -DRFID_RC522=1
 	-DRFID_RST_PIN=16
 	-DRFID_SDA_PIN=5
 	-DMFRC522_SPICLOCK=8000000u
