--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = espressif32
+platform = espressif32@^3.5
 board = esp32dev
 framework = arduino
 board_build.partitions = min_spiffs.csv
