--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ lib_deps =
 	adafruit/TinyXML@^1.0.2
 	rpolitex/ArduinoNvs@^2.5
 	https://github.com/iesoretania/lv_lib_qrcode.git#master
-	fabiuz7/Melody Player@^2.2.1
+	fabianoriccardi/Melody Player@^2.2.2
 	roboticsbrno/SmartLeds@^1.2.1
 monitor_speed = 115200
 build_flags = 
